--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "aljorhythm-rust"
 version = "0.1.0"
-authors = ["Joel <joel.lim@circles.asia>"]
+authors = ["Joel <103879u@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ferris-says = "0.2"
